Implemented Toolbar button icons via StreamGeometry, and toolbars items / seperators.

--- a/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
+++ b/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
@@ -256,9 +256,18 @@
     <Compile Include="ToolBars\ExcludeToolBarDefinition.cs" />
     <Compile Include="ToolBars\ExcludeToolBarItemDefinition.cs" />
     <Compile Include="ToolBars\ExcludeToolBarItemGroupDefinition.cs" />
+    <Compile Include="ToolBars\IToolBar.cs" />
+    <Compile Include="ToolBars\IToolBarBuilder.cs" />
+    <Compile Include="ToolBars\IToolBars.cs" />
+    <Compile Include="ToolBars\Models\CommandToolBarItem.cs" />
+    <Compile Include="ToolBars\Models\ToolBarItemBase.cs" />
+    <Compile Include="ToolBars\Models\ToolBarItemSeparator.cs" />
+    <Compile Include="ToolBars\Models\ToolBarModel.cs" />
+    <Compile Include="ToolBars\ToolBarBuilder.cs" />
     <Compile Include="ToolBars\ToolBarDefinition.cs" />
     <Compile Include="ToolBars\ToolBarItemDefinition.cs" />
     <Compile Include="ToolBars\ToolBarItemGroupDefinition.cs" />
+    <Compile Include="ToolBars\ViewModels\ToolBarsViewModel.cs" />
     <Compile Include="Toolchains\IToolchain.cs" />
     <Compile Include="Utils\Constants.cs" />
     <Compile Include="Utils\DynamicExtensions.cs" />
