--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -285,6 +285,9 @@
     <Compile Include="Controls\VariableControl.paml.cs">
       <DependentUpon>VariableControl.paml</DependentUpon>
     </Compile>
+    <Compile Include="Shell\Commands\CleanCommandDefinition.cs" />
+    <Compile Include="Shell\Commands\BuildCommandDefinition.cs" />
+    <Compile Include="Shell\Commands\UnCommentCommandDefinition.cs" />
     <Compile Include="Shell\Commands\CopyCommandDefinition.cs" />
     <Compile Include="Shell\Commands\CloseFileCommandDefinition.cs" />
     <Compile Include="Shell\Commands\CloseFileCommandHandler.cs" />
@@ -293,6 +296,9 @@
     <Compile Include="Shell\Commands\ExitCommandHandler.cs" />
     <Compile Include="Shell\Commands\NewFileCommandListDefinition.cs" />
     <Compile Include="Shell\Commands\SaveAllFileCommandDefinition.cs" />
+    <Compile Include="Shell\Commands\RedoCommandDefinition.cs" />
+    <Compile Include="Shell\Commands\CommentCommandDefinition.cs" />
+    <Compile Include="Shell\Commands\UndoCommandDefinition.cs" />
     <Compile Include="Shell\Commands\SaveFileCommandDefinition.cs" />
     <Compile Include="Shell\MenuDefinitions.cs" />
     <Compile Include="Shell\ToolBarDefinitions.cs" />
