--- a/AvalonStudio/AvalonStudio.TextEditor/packages.config
+++ b/AvalonStudio/AvalonStudio.TextEditor/packages.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Avalonia" version="0.2.0.1510-alpha" targetFramework="net451" />
-  <package id="Perspex" version="9999.0.1492-nightly" targetFramework="net451" />
-  <package id="Perspex.Xaml.Behaviors" version="9999.0.164-nightly" targetFramework="net451" />
+  <package id="Avalonia.Xaml.Behaviors" version="0.2.0.176-nightly" targetFramework="net451" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net452" />
