--- a/AvalonStudio/AvalonStudio/packages.config
+++ b/AvalonStudio/AvalonStudio/packages.config
@@ -2,10 +2,9 @@
 <packages>
   <package id="Avalonia" version="0.2.0.1510-alpha" targetFramework="net451" />
   <package id="Avalonia.Desktop" version="0.2.0.1510-alpha" targetFramework="net451" />
+  <package id="Avalonia.Xaml.Behaviors" version="0.2.0.176-nightly" targetFramework="net451" />
   <package id="Caliburn.Micro" version="3.0.0" targetFramework="net451" />
   <package id="Caliburn.Micro.Core" version="3.0.0" targetFramework="net451" />
-  <package id="Perspex" version="9999.0.1492-nightly" targetFramework="net451" />
-  <package id="Perspex.Xaml.Behaviors" version="9999.0.164-nightly" targetFramework="net451" />
   <package id="Prism.Core" version="6.1.0" targetFramework="net451" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net452" />
