--- a/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
+++ b/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
@@ -253,6 +253,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestFrameworks\ITestFramework.cs" />
     <Compile Include="TestFrameworks\Test.cs" />
+    <Compile Include="Threading\JobRunner.cs" />
     <Compile Include="ToolBars\CommandToolBarItemDefinition.cs" />
     <Compile Include="ToolBars\ExcludeToolBarDefinition.cs" />
     <Compile Include="ToolBars\ExcludeToolBarItemDefinition.cs" />
