initial implementation of the code index drop down at top of editor.

--- a/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
+++ b/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
@@ -187,6 +187,7 @@
     <Compile Include="Documents\IEditor.cs" />
     <Compile Include="Git\Git.cs" />
     <Compile Include="IoC.cs" />
+    <Compile Include="Languages\IndexEntry.cs" />
     <Compile Include="MainMenu\IMenu.cs" />
     <Compile Include="MainMenu\IMenuBuilder.cs" />
     <Compile Include="MainMenu\MenuBuilder.cs" />
