--- a/AvalonStudio/AvalonStudio.Languages.CPlusPlus/packages.config
+++ b/AvalonStudio/AvalonStudio.Languages.CPlusPlus/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Avalonia" version="0.2.0.1673-alpha" targetFramework="net451" />
+  <package id="Avalonia" version="0.2.0.1700-alpha" targetFramework="net451" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net452" />
@@ -9,4 +9,10 @@
   <package id="Serilog" version="1.5.14" targetFramework="net451" />
   <package id="Splat" version="1.6.2" targetFramework="net452" />
   <package id="Sprache" version="2.0.0.50" targetFramework="net451" />
+  <package id="System.Reactive" version="3.0.0" targetFramework="net451" />
+  <package id="System.Reactive.Core" version="3.0.0" targetFramework="net451" />
+  <package id="System.Reactive.Interfaces" version="3.0.0" targetFramework="net451" />
+  <package id="System.Reactive.Linq" version="3.0.0" targetFramework="net451" />
+  <package id="System.Reactive.PlatformServices" version="3.0.0" targetFramework="net451" />
+  <package id="System.Reactive.Windows.Threading" version="3.0.0" targetFramework="net451" />
 </packages>
