--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -230,12 +230,12 @@
     <Compile Include="Debugging\BreakPointMargin.cs" />
     <Compile Include="Controls\Editor\SymbolViewModel.cs" />
     <Compile Include="Controls\Editor.paml.cs">
-      <DependentUpon>Editor.paml</DependentUpon>
+      <DependentUpon>Editor.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\Editor\EditorModel.cs" />
     <Compile Include="Controls\Editor\EditorViewModel.cs" />
     <Compile Include="Controls\Intellisense.paml.cs">
-      <DependentUpon>Intellisense.paml</DependentUpon>
+      <DependentUpon>Intellisense.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\IntellisenseViewModel.cs" />
     <Compile Include="Controls\MainMenu.paml.cs">
@@ -302,7 +302,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Controls\Editor.paml">
+    <EmbeddedResource Include="Controls\Editor.xaml">
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\MainMenu.paml">
@@ -312,7 +312,7 @@
     <EmbeddedResource Include="Controls\PackageManagerDialogView.paml" />
     <EmbeddedResource Include="Controls\StatusBar.paml" />
     <EmbeddedResource Include="Controls\ToolBar.paml" />
-    <EmbeddedResource Include="Controls\Intellisense.paml">
+    <EmbeddedResource Include="Controls\Intellisense.xaml">
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\MetroWindow.paml">
