--- a/AvalonStudio/AvalonStudio.Controls.Standard/AvalonStudio.Controls.Standard.csproj
+++ b/AvalonStudio/AvalonStudio.Controls.Standard/AvalonStudio.Controls.Standard.csproj
@@ -167,6 +167,10 @@
     <Compile Include="SolutionExplorer\Commands\OpenSolutionCommandDefinition.cs" />
     <Compile Include="SolutionExplorer\Commands\NewSolutionCommandDefinition.cs" />
     <Compile Include="SolutionExplorer\MenuDefinitions.cs" />
+    <Compile Include="SolutionExplorer\NewItemDialog.paml.cs">
+      <DependentUpon>NewItemDialogView.paml</DependentUpon>
+    </Compile>
+    <Compile Include="SolutionExplorer\NewItemDialogViewModel.cs" />
     <Compile Include="SolutionExplorer\NewProjectDialogView.paml.cs">
       <DependentUpon>NewProjectDialogView.paml</DependentUpon>
     </Compile>
@@ -240,6 +244,9 @@
     <EmbeddedResource Include="AboutScreen\AboutDialogView.paml" />
     <None Include="packages.config" />
     <EmbeddedResource Include="SolutionExplorer\ProjectConfigurationDialogView.paml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SolutionExplorer\NewItemDialogView.paml">
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
