--- a/AvalonStudio/AvalonStudio.Controls.TeamExplorer/AvalonStudio.Controls.TeamExplorer.csproj
+++ b/AvalonStudio/AvalonStudio.Controls.TeamExplorer/AvalonStudio.Controls.TeamExplorer.csproj
@@ -172,7 +172,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>if not exists "$(TargetPath) ..\..\..\AvalonStudio\bin\$(ConfigurationName)\Plugins" mkdir $(TargetPath) ..\..\..\AvalonStudio\bin\$(ConfigurationName)\Plugins
+    <PostBuildEvent>if not exists " ..\..\..\AvalonStudio\bin\$(ConfigurationName)\Plugins" mkdir ..\..\..\AvalonStudio\bin\$(ConfigurationName)\Plugins
 copy $(TargetPath) ..\..\..\AvalonStudio\bin\$(ConfigurationName)\Plugins\$(TargetFileName)</PostBuildEvent>
   </PropertyGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
