[MemoryViewer] Fixed ported code to make it functional, although very buggy and unpolished.

--- a/AvalonStudio/AvalonStudio.Debugging/AvalonStudio.Debugging.csproj
+++ b/AvalonStudio/AvalonStudio.Debugging/AvalonStudio.Debugging.csproj
@@ -201,9 +201,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="MemoryView.paml">
+    <EmbeddedResource Include="MemoryView.paml">
       <SubType>Designer</SubType>
-    </None>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
