[GDB Support] Implemented support for GDB Async mode. Pause on Windows is now much more reliable, and also opens the way for live variables.

--- a/AvalonStudio/AvalonStudio.Debugging.GDB/AvalonStudio.Debugging.GDB.csproj
+++ b/AvalonStudio/AvalonStudio.Debugging.GDB/AvalonStudio.Debugging.GDB.csproj
@@ -153,11 +153,13 @@
     <Compile Include="DataListRegisterNamesCommand.cs" />
     <Compile Include="DataListRegisterValuesCommand.cs" />
     <Compile Include="DataReadMemoryBytesCommand.cs" />
+    <Compile Include="ExecInterruptCommand.cs" />
     <Compile Include="ExecNextInstructionCommand.cs" />
     <Compile Include="FinishCommand.cs" />
     <Compile Include="GDBDebugAdaptor.cs" />
     <Compile Include="GDBDebugger.cs" />
     <Compile Include="GDBResponse.cs" />
+    <Compile Include="GDBSetCommand.cs" />
     <Compile Include="InterruptCommand.cs" />
     <Compile Include="MonitorCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
