--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -397,6 +397,10 @@
       <Project>{2303a1a3-d7aa-41cc-972d-a710d7d3d1d3}</Project>
       <Name>AvalonStudio.TextEditor</Name>
     </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.Toolchains.Clang\AvalonStudio.Toolchains.Clang.csproj">
+      <Project>{1fc43c7d-5758-42d7-9977-986074e9cbc0}</Project>
+      <Name>AvalonStudio.Toolchains.Clang</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Toolchains.LocalGCC\AvalonStudio.Toolchains.LocalGCC.csproj">
       <Project>{7a82c777-039e-47aa-a77b-3a9544e147c5}</Project>
       <Name>AvalonStudio.Toolchains.LocalGCC</Name>
