Jlink device selection with insta-filter.

--- a/AvalonStudio/AvalonStudio.Debugging.GDB.JLink/AvalonStudio.Debugging.GDB.JLink.csproj
+++ b/AvalonStudio/AvalonStudio.Debugging.GDB.JLink/AvalonStudio.Debugging.GDB.JLink.csproj
@@ -148,6 +148,7 @@
       <DependentUpon>JLinkSettingsFormView.xaml</DependentUpon>
     </Compile>
     <Compile Include="JLinkSettingsFormViewModel.cs" />
+    <Compile Include="JLinkTargetDeviceViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
