Added initial bitthunder toolchain

--- a/AvalonStudio/AvalonStudio.Toolchains.GCC/AvalonStudio.Toolchains.GCC.csproj
+++ b/AvalonStudio/AvalonStudio.Toolchains.GCC/AvalonStudio.Toolchains.GCC.csproj
@@ -45,6 +45,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AvalonStudio.Extensibility\AvalonStudio.Extensibility.csproj">
+      <Project>{5614AA2F-2B01-4E0D-807E-924680C570ED}</Project>
+      <Name>AvalonStudio.Extensibility</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Toolchains.Standard\AvalonStudio.Toolchains.Standard.csproj">
       <Project>{72c71854-5897-4e14-a1ae-b3b48f139af7}</Project>
       <Name>AvalonStudio.Toolchains.Standard</Name>
